fix z-index

--- a/src/Texts.css
+++ b/src/Texts.css
@@ -1,20 +1,29 @@
-.text {
-  color: #023976;
+.AreaTematica {
   line-height: 1;
   font-size: 1em;
   letter-spacing: 1.5px;
-  font-weight: 400;
+  font-weight: 500;
+  font-size: 1.2em;
 }
 
-.text>h2 {
+.AreaTematica>h2 {
+  margin: auto 0;
+
   color: #023976;
-  margin-top: 0px;
-  margin-bottom: 1px;
+  margin-bottom: 0px;
   font-size: 3em;
+  width: calc(25vh + 25vw);
 }
 
+.AreaTematica>span {
+  color: #002753;
+  font-size: 1em;
+  width: calc(25vh + 25vw);
+}
+
+/* 
 @media only screen and (max-width: 800px) {
-  .text>h2 {
+  .AreaTematica>h2 {
     font-size: 3em;
     color: red;
 ;
@@ -22,7 +31,7 @@
 }
 
 @media only screen and (max-width: 700px) {
-  .text>h2 {
+  .AreaTematica>h2 {
     font-size: 3em;
     color: green;
 
@@ -30,6 +39,7 @@
 }
 
 @media only screen and (max-width: 600px) {
+
   .text {
     font-size: 1.2em;
     color: blue;
@@ -38,7 +48,7 @@
     font-size: 4em;
     color: blue;
   }
-}
+} */
 
 .btn {
   display: block;
@@ -48,7 +58,7 @@
   cursor: pointer;
   padding: 10px 20px;
   background: #023976;
-  background: linear-gradient(90deg, #026eb0 0%, #023976 100%);    
+  background: linear-gradient(90deg, #026eb0 0%, #023976 100%);
   z-index: 20;
   color: #ffffff;
   border-radius: 10px;
