--- a/src/index.css
+++ b/src/index.css
@@ -17,4 +17,14 @@ body {
   background: linear-gradient(180deg, #ffffff 50%, #b9b9b9);
   font-family: "Inter var", sans-serif;
   -webkit-font-smoothing: antialiased;
+  margin: 0;
+  padding: 0;
+}
+
+canvas {
+  z-index: -10 !important;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: pixelated;
+  image-rendering: optimize-contrast;
 }
